--- a/.github/workflows/npm-gulp.yml
+++ b/.github/workflows/npm-gulp.yml
@@ -1,3 +1,14 @@
+---
+name: Build and Deploy
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -8,45 +19,9 @@ jobs:
 
       - name: Install dependencies
         run: npm install
-name: NodeJS with Gulp
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+      - name: Run build process
+        run: npm run build
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x, 22.x]  # ✅ Supports multiple Node versions
-
-    steps:
-    - name: 🚀 Checkout Repository
-      uses: actions/checkout@v4  # ✅ Ensures we get the latest code
-
-    - name: 🔧 Setup Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'  # ✅ Enables caching to speed up dependencies installation
-
-    - name: 📦 Install Dependencies
-      run: |
-        npm install
-        npm ci  # ✅ Ensures clean installation for reproducible builds
-
-    - name: 🛠 Run Gulp Build
-      run: gulp
-      env:
-        NODE_ENV: production  # ✅ Adds environment setting for production mode
-
-    - name: ✅ Verify Build Success
-      run: echo "Build completed successfully!"  # ✅ Provides clear logging    - name: 🚀 Upload Build Artifacts (Optional)
-      uses: actions/upload-artifact@v4 
-      with:
-        name: build-output
-        path: dist/  # ✅ Uploads built files for reference (modify if needed)
+      - name: Deploy
+        run: npm run deploy
