--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "creatorsync",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Collaborative platform integrating beat creation, real-time messaging, and seamless finalization workflows.",
   "main": "server.js",
   "scripts": {
@@ -11,12 +11,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "socket.io": "4.5.0",
+    "socket.io": "^4.5.0",
     "multer": "^1.4.5-lts",
     "stripe": "^14.0.0",
-    "bcrypt": "5.1.0",
+    "bcrypt": "^5.1.0",
     "crypto": "^1.0.1",
-    "morgan": "^1.11.0",
+    "morgan": "^1.11.1",  // ✅ Updated to latest available version
     "helmet": "^7.1.0",
     "compression": "^1.7.4",
     "uuid": "^9.0.0"
