--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "helmet": "^7.1.0",
-    "morgan": "^1.10.0",
+    "socket.io": "4.5.0",
     "multer": "^1.4.5-lts",
-    "socket.io": "^4.8.1",
     "stripe": "^14.0.0",
+    "bcrypt": "5.1.0",
+    "crypto": "^1.0.1",
+    "morgan": "^1.11.0",
+    "helmet": "^7.1.0",
+    "compression": "^1.7.4",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
