--- a/package.json
+++ b/package.json
@@ -17,11 +17,7 @@
     "socket.io": "4.5.0",
     "multer": "^1.4.5-lts",
     "stripe": "^14.0.0",
-    "bcrypt": "5.1.0",
-    "crypto": "^1.0.1",
-    "morgan": "^1.11.0",
     "helmet": "^7.1.0",
-    "compression": "^1.7.4",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -37,6 +33,5 @@
     "payments",
     "finisher"
   ],
-  "author": "Demond Balentine",
-  "license": "MIT"
+  "author": "Demond Balentine"
 }
