--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "echo \"No tests specified\" && exit 0"
   },
   "dependencies": {
     "bcrypt": "5.1.0",
@@ -17,9 +18,6 @@
     "socket.io": "4.5.0",
     "multer": "^1.4.5-lts",
     "stripe": "^14.0.0",
-    "bcrypt": "5.1.0",
-    "crypto": "^1.0.1",
-    
     "helmet": "^7.1.0",
     "uuid": "^9.0.0"
   },
@@ -37,5 +35,5 @@
     "finisher"
   ],
   "author": "Demond Balentine",
-  
+  "license": "MIT"
 }
