--- a/package.json
+++ b/package.json
@@ -1,40 +1,47 @@
 {
-  "name": "creatorsync",
-  "version": "1.0.1",
-  "description": "Collaborative platform integrating beat creation, real-time messaging, and seamless finalization workflows.",
-  "main": "server.js",
+  "name": "creatorsync", // Branded platform core
+  "version": "1.0.1", // Indicates early but stable product iteration
+  "description": "Collaborative platform integrating beat creation, real-time messaging, and seamless finalization workflows.", // Communicates the all-in-one creative workflow
+  "main": "server.js", // Entry point for backend operations
+
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"No tests specified\" && exit 0",
-    "build": "echo \"No build step defined\""
+    "start": "node server.js", // Launches live production server
+    "dev": "nodemon server.js", // Enables live reloading for developer productivity
+    "test": "echo \"No tests specified\" && exit 0", // Placeholder; test coverage can be prioritized for scaling
+    "build": "echo \"No build step defined\"", // Placeholder for future asset bundling or transpilation
+    "deploy": "echo \"Deploy step not yet defined\"" // Reserved for future CI/CD integration or hosting service push
   },
+
   "dependencies": {
-    "bcrypt": "5.1.0",
-    "compression": "^1.7.4",
-    "cors": "^2.8.5",
-    "crypto": "^1.0.1",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "socket.io": "4.5.0",
-    "multer": "^1.4.5-lts",
-    "stripe": "^14.0.0",
-    "helmet": "^7.1.0",
-    "uuid": "^9.0.0"
+    "bcrypt": "5.1.0", // Secures user credentials (user trust, regulatory compliance)
+    "compression": "^1.7.4", // Improves response times, especially on media-heavy endpoints
+    "cors": "^2.8.5", // Enables safe, cross-platform client communication
+    "crypto": "^1.0.1", // Foundation for encryption and secure transactions
+    "dotenv": "^16.5.0", // Manages environment variables, supporting flexible deployments
+    "express": "^5.1.0", // Industry-standard backend framework, scalable and fast
+    "socket.io": "4.5.0", // Powers real-time interactions (collaboration/chat features)
+    "multer": "^1.4.5-lts", // Enables file uploads (beats, stems, project assets)
+    "stripe": "^14.0.0", // Built-in payment infrastructure (essential for monetization)
+    "helmet": "^7.1.0", // Adds security headers to protect user data and prevent attacks
+    "uuid": "^9.0.0" // Generates unique IDs (project tracking, collaboration sessions)
   },
+
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1" // Speeds up iteration during development; supports rapid prototyping
   },
+
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=18.0.0" // Ensures compatibility with latest features & security patches
   },
+
   "keywords": [
-    "music",
-    "beats",
-    "collaboration",
-    "payments",
-    "finisher"
+    "music",           // Creative vertical
+    "beats",           // Niche focus
+    "collaboration",   // Core value proposition
+    "payments",        // Monetization layer
+    "finisher"         // Branding element; extension or linked product
   ],
-  "author": "Demond Balentine",
-  "license": "MIT"
+
+  "author": "Demond Balentine", // Founder-led development = ownership, vision, and adaptability
+  "license": "MIT" // Open licensing fosters developer engagement and potential ecosystem growth
 }
