--- a/package.json
+++ b/package.json
@@ -1,47 +1,47 @@
 {
   "name": "creatorsync",
-  "version": "1.0.1",
-  "description": "Collaborative platform integrating beat creation, real-time messaging, and seamless finalization workflows.",
-  "main": "server.js",
-
+  "version": "1.0.0",
+  "description": "CreatorSync is a proprietary platform helping producers and artists monetize beats through secure sales, licensing, and real-time collaboration.",
+  "main": "server/server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"No tests specified\" && exit 0",
-    "build": "echo \"Skipping build—server-only app\"",
-    "deploy": "echo \"Deploy step not yet defined\""
+    "start": "node server/server.js",
+    "dev": "nodemon server/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-
-  "dependencies": {
-    "bcrypt": "5.1.0",
-    "compression": "^1.7.4",
-    "cors": "^2.8.5",
-    "crypto": "^1.0.1",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "socket.io": "4.5.0",
-    "multer": "^1.4.5-lts",
-    "stripe": "^14.0.0",
-    "helmet": "^7.1.0",
-    "uuid": "^9.0.0"
-  },
-
-  "devDependencies": {
-    "nodemon": "^3.0.1"
-  },
-
-  "engines": {
-    "node": ">=18.0.0"
-  },
-
   "keywords": [
     "music",
     "beats",
+    "producer",
+    "artist",
+    "monetization",
     "collaboration",
-    "payments",
-    "finisher"
+    "real-time"
   ],
-
-  "author": "Demond Balentine",
-  "license": "MIT"
+  "author": "Demond Balentine <demond.balentine@atlasschool.com>",
+  "license": "PROPRIETARY",
+  "dependencies": {
+    "bcrypt": "^5.1.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^4.19.2",
+    "helmet": "^7.1.0",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts",
+    "socket.io": "^4.8.1",
+    "stripe": "^14.0.0",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Debalent/CreatorSync.git"
+  },
+  "private": true
 }
