feat: upgrade to enterprise-grade v2.0.0 with MongoDB integration
- Add MongoDB database manager with connection pooling and retry logic
- Implement enterprise repository pattern for Users and Beats
- Create comprehensive .env.example with 100+ configuration options
- Add AI coding agent instructions (.github/copilot-instructions.md)
- Add production-ready .gitignore for security and clean commits
- Update package.json to v2.0.0 with MongoDB dependency
- Update README with enterprise features and v2.0.0 status
- Add database indexing for performance (text search, compound indexes)
- Implement transaction support for data consistency
- Add health check endpoint for monitoring

BREAKING CHANGES:
- MongoDB now required (previously mock data)
- Database connection must be initialized before app start
- Environment variables expanded for enterprise deployment

--- a/.env.example
+++ b/.env.example
@@ -1,52 +1,203 @@
-# CreatorSync Environment Configuration
-# Copy this file to .env and update with your actual values
+# CreatorSync Enterprise Environment Configuration
+# Copy this file to .env and fill in your actual values
 
-# Server Configuration
+# ========================================
+# Application Configuration
+# ========================================
+NODE_ENV=production
 PORT=3000
-NODE_ENV=development
-
-# Client URL (for CORS)
 CLIENT_URL=http://localhost:5501
 
-# Database Configuration (implement when adding database)
-# DATABASE_URL=mongodb://localhost:27017/creatorsync
-# DATABASE_NAME=creatorsync
+# ========================================
+# Database Configuration
+# ========================================
+# MongoDB Connection String
+MONGODB_URI=mongodb://localhost:27017/creatorsync
+# Or for MongoDB Atlas (Enterprise):
+# MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/creatorsync?retryWrites=true&w=majority
 
-# Stripe Payment Configuration
+# Database Pool Settings
+DB_POOL_SIZE=10
+DB_POOL_MIN=2
+DB_MAX_IDLE_TIME_MS=30000
+
+# ========================================
+# Redis Cache Configuration
+# ========================================
+REDIS_URL=redis://localhost:6379
+REDIS_PASSWORD=
+REDIS_DB=0
+REDIS_TTL=3600
+REDIS_KEY_PREFIX=creatorsync:
+
+# ========================================
+# Authentication & Security
+# ========================================
+# JWT Secret (REQUIRED - use a 256-bit random string in production)
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-use-256-bit-random-string
+JWT_EXPIRES_IN=7d
+JWT_REFRESH_EXPIRES_IN=30d
+
+# Bcrypt Salt Rounds (10-12 recommended for production)
+BCRYPT_SALT_ROUNDS=12
+
+# Session Configuration
+SESSION_SECRET=your-session-secret-change-in-production
+SESSION_MAX_AGE=86400000
+
+# ========================================
+# Payment Processing
+# ========================================
+# Stripe API Keys (https://dashboard.stripe.com/apikeys)
 STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
 STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
 STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
 
-# JWT Configuration (implement when adding JWT auth)
-JWT_SECRET=your_super_secret_jwt_key_here
-JWT_EXPIRES_IN=24h
+# Platform Fees
+PLATFORM_FEE_PERCENTAGE=10
+MIN_PAYOUT_AMOUNT=50
 
-# Email Configuration
-EMAIL_HOST=smtp.gmail.com
-EMAIL_PORT=587
-EMAIL_SECURE=false
-EMAIL_USER=your_email@gmail.com
-EMAIL_PASSWORD=your_app_password_here
+# ========================================
+# Email Service
+# ========================================
+# SendGrid (Recommended for Enterprise)
+SENDGRID_API_KEY=SG.your_sendgrid_api_key_here
 EMAIL_FROM=noreply@creatorsync.com
 EMAIL_FROM_NAME=CreatorSync
-# Alternative: SendGrid
-# SENDGRID_API_KEY=your_sendgrid_api_key_here
 
-# File Storage Configuration
+# Alternative: SMTP Configuration
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=your-app-specific-password
+
+# ========================================
+# Streaming Platform APIs
+# ========================================
+# Twitch API (https://dev.twitch.tv/console/apps)
+TWITCH_CLIENT_ID=your_twitch_client_id_here
+TWITCH_CLIENT_SECRET=your_twitch_client_secret_here
+TWITCH_CHANNEL_NAME=your_channel_name
+
+# YouTube API (https://console.cloud.google.com)
+YOUTUBE_API_KEY=your_youtube_api_key_here
+YOUTUBE_CHANNEL_ID=your_channel_id_here
+
+# ========================================
+# File Upload & Storage
+# ========================================
+# Local Storage
 UPLOAD_DIR=./public/uploads
 MAX_FILE_SIZE=104857600
-ALLOWED_AUDIO_TYPES=audio/mpeg,audio/wav,audio/flac,audio/aac
-ALLOWED_IMAGE_TYPES=image/jpeg,image/png,image/gif
+MAX_FILE_SIZE_MB=100
+ALLOWED_AUDIO_TYPES=audio/mpeg,audio/wav,audio/flac,audio/aac,audio/ogg
+ALLOWED_IMAGE_TYPES=image/jpeg,image/png,image/gif,image/webp
 
-# Redis Configuration (for session storage and caching)
-# REDIS_URL=redis://localhost:6379
-# REDIS_PASSWORD=your_redis_password_here
+# AWS S3 (Enterprise Cloud Storage)
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=us-east-1
+AWS_S3_BUCKET=creatorsync-uploads
+AWS_S3_CDN_URL=
 
-# AWS S3 Configuration (for cloud file storage)
-# AWS_ACCESS_KEY_ID=your_aws_access_key
-# AWS_SECRET_ACCESS_KEY=your_aws_secret_key
-# AWS_REGION=us-east-1
-# AWS_S3_BUCKET=creatorsync-files
+# ========================================
+# Rate Limiting
+# ========================================
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
+RATE_LIMIT_AUTH_MAX=5
+RATE_LIMIT_UPLOAD_MAX=10
+RATE_LIMIT_PAYMENT_MAX=20
+
+# ========================================
+# Logging Configuration
+# ========================================
+LOG_LEVEL=info
+LOG_MAX_SIZE=10485760
+LOG_MAX_FILES=5
+LOG_DIR=./logs
+LOG_FORMAT=json
+
+# ========================================
+# Real-Time Features
+# ========================================
+# Socket.IO Configuration
+SOCKET_IO_PING_TIMEOUT=60000
+SOCKET_IO_PING_INTERVAL=25000
+SOCKET_IO_MAX_HTTP_BUFFER_SIZE=1e6
+MAX_COLLABORATION_USERS=10
+
+# ========================================
+# AI & Machine Learning
+# ========================================
+# OpenAI API (AI Songwriter Feature)
+OPENAI_API_KEY=sk-your_openai_api_key_here
+OPENAI_MODEL=gpt-4
+AI_SONGWRITER_MAX_TOKENS=1000
+AI_SONGWRITER_TEMPERATURE=0.7
+
+# ========================================
+# Monitoring & Analytics
+# ========================================
+# Sentry Error Tracking
+SENTRY_DSN=
+SENTRY_ENVIRONMENT=production
+SENTRY_TRACES_SAMPLE_RATE=0.1
+
+# Application Performance Monitoring
+NEW_RELIC_LICENSE_KEY=
+NEW_RELIC_APP_NAME=CreatorSync
+DATADOG_API_KEY=
+
+# Google Analytics
+GA_TRACKING_ID=
+
+# ========================================
+# Feature Flags
+# ========================================
+ENABLE_AI_SONGWRITER=true
+ENABLE_COLLABORATION=true
+ENABLE_ANALYTICS=true
+ENABLE_EMAIL_NOTIFICATIONS=true
+ENABLE_PUSH_NOTIFICATIONS=false
+ENABLE_WEBHOOKS=true
+
+# ========================================
+# Subscription Tiers & Limits
+# ========================================
+TIER_FREE_MAX_UPLOADS=5
+TIER_STARTER_MAX_UPLOADS=50
+TIER_PRO_MAX_UPLOADS=500
+TIER_ENTERPRISE_MAX_UPLOADS=-1
+
+TIER_FREE_MAX_STORAGE_GB=1
+TIER_STARTER_MAX_STORAGE_GB=50
+TIER_PRO_MAX_STORAGE_GB=500
+TIER_ENTERPRISE_MAX_STORAGE_GB=-1
+
+# ========================================
+# CDN & Performance
+# ========================================
+CDN_URL=
+ASSETS_BASE_URL=
+ENABLE_COMPRESSION=true
+ENABLE_CACHING=true
+
+# ========================================
+# Development & Testing
+# ========================================
+# Debug mode (verbose logging)
+DEBUG=false
+
+# Test mode (disables actual transactions)
+TEST_MODE=false
+
+# Mock external services in development
+MOCK_STRIPE=false
+MOCK_EMAIL=false
+MOCK_AI_SERVICES=false
+MOCK_REDIS=false
 
 # Security Configuration
 BCRYPT_ROUNDS=12
