--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
   "name": "creatorsync",
-  "version": "1.0.0",
-  "description": "CreatorSync is a proprietary platform helping producers and artists monetize beats through secure sales, licensing, and real-time collaboration.",
+  "version": "2.0.0",
+  "description": "CreatorSync - Enterprise-grade music monetization platform for producers and artists. Features beat marketplace, real-time collaboration, AI-powered tools, and integrated streaming API services.",
   "main": "server/server.js",
   "scripts": {
     "start": "node server/server.js",
     "dev": "nodemon server/server.js",
     "lint": "eslint server/ public/js/",
     "lint:fix": "eslint server/ public/js/ --fix",
-    "test": "jest --coverage",
+    "test": "jest --coverage --coverageThreshold='{\"global\":{\"branches\":70,\"functions\":70,\"lines\":70,\"statements\":70}}'",
     "test:watch": "jest --watch",
     "test:unit": "jest tests/unit",
     "test:integration": "jest tests/integration",
     "docker:build": "docker build -t creatorsync .",
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
-    "docker:logs": "docker-compose logs -f"
+    "docker:logs": "docker-compose logs -f",
+    "db:init": "node scripts/initDatabase.js",
+    "health": "node scripts/healthCheck.js"
   },
   "keywords": [
     "music",
@@ -39,6 +41,7 @@
     "fluent-ffmpeg": "^2.1.3",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.3.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts",
     "music-metadata": "^11.10.0",
