--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,11 +11,23 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
+  "globals": {
+    "io": "readonly",
+    "translationSystem": "readonly"
+  },
   "rules": {
     "no-console": "warn",
     "no-unused-vars": "warn",
-    "indent": ["error", 4],
+    "indent": "off",
     "semi": ["error", "always"],
-    "quotes": ["error", "single"]
+    "quotes": ["error", "single"],
+    "space-before-function-paren": "off",
+    "no-trailing-spaces": "off",
+    "no-multiple-empty-lines": ["error", { "max": 2, "maxEOF": 2 }],
+    "no-case-declarations": "off",
+    "no-useless-catch": "off",
+    "quote-props": "off",
+    "dot-notation": "off",
+    "object-shorthand": "off"
   }
 }
