fix: remove requirements.txt and use explicit Node.js start command for Render
- Remove requirements.txt that was causing Python detection
- Change startCommand to explicitly run 'node server/server.js' instead of 'npm start'
- This prevents Render from trying to execute gunicorn
- Add build script fallback with || true to allow optional build step

--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,8 @@ services:
     name: creatorsync
     runtime: node
     region: oregon
-    buildCommand: npm install
-    startCommand: npm start
+    buildCommand: npm install && npm run build || true
+    startCommand: node server/server.js
     envVars:
       - key: NODE_ENV
         value: production
