fix: remove npm run build from Render buildCommand - no build script exists

--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: creatorsync
     runtime: node
     region: oregon
-    buildCommand: npm install && npm run build || true
+    buildCommand: npm install
     startCommand: node server/server.js
     envVars:
       - key: NODE_ENV
