--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,10 @@
 services:
   - type: web
     name: creatorsync
-    runtime: node
+    runtime: docker
     region: oregon
-    buildCommand: npm install
-    startCommand: node server/server.js
+    dockerfilePath: ./Dockerfile
+    dockerContext: ./
     envVars:
       - key: NODE_ENV
         value: production
