Integrate multi-payment method APIs - add support for Apple Pay, Google Pay, PayPal, Cash App, Chime, One Card via Stripe Payment Intents. Enable automatic payment methods, mobile wallets, and PayPal SDK integration. Update trial to 15 days with 50% off first month. Add PayPal order creation and confirmation endpoints

--- a/.env.example
+++ b/.env.example
@@ -53,9 +53,30 @@ STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
 STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
 STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
 
-# Platform Fees
-PLATFORM_FEE_PERCENTAGE=10
+# PayPal API Keys (https://developer.paypal.com/developer/applications)
+PAYPAL_CLIENT_ID=your_paypal_client_id_here
+PAYPAL_CLIENT_SECRET=your_paypal_client_secret_here
+PAYPAL_MODE=sandbox
+# PAYPAL_MODE=live (for production)
+
+# Apple Pay Configuration (via Stripe)
+# Apple Pay is automatically enabled through Stripe when configured
+# Follow Stripe's Apple Pay setup guide: https://stripe.com/docs/apple-pay
+
+# Google Pay Configuration (via Stripe)
+# Google Pay is automatically enabled through Stripe when configured
+# Follow Stripe's Google Pay setup guide: https://stripe.com/docs/google-pay
+
+# Mobile Payment Options
+# Cash App, Chime, One Card are handled through Stripe Payment Methods
+# No additional API keys required - configured in Stripe Dashboard
+
+# Platform Fees & Subscription Settings
+PLATFORM_FEE_PERCENTAGE=12.5
 MIN_PAYOUT_AMOUNT=50
+TRIAL_PERIOD_DAYS=15
+FIRST_MONTH_DISCOUNT=0.5
+# 50% off first month after trial
 
 # ========================================
 # Email Service
