Add internal treasury system with automated weekly payouts - Created TreasuryManager for centralized revenue tracking and payout processing - Added PayoutScheduler with cron job for Friday 8:00 AM ACH transfers - Integrated treasury.recordRevenue() into payment and subscription routes - Created /api/treasury endpoints for admin oversight and manual triggers - Added business bank account configuration in .env.example - Treasury tracks: totalRevenue, totalCommissions, totalPayouts, pendingBalance - Automated payouts every Friday at 8:00 AM via node-cron scheduler - Bank account structure ready for LLC/EIN and real account details - Comprehensive logging for financial audit trail - Singleton pattern prevents duplicate treasury/scheduler instances

--- a/.env.example
+++ b/.env.example
@@ -78,6 +78,17 @@ TRIAL_PERIOD_DAYS=15
 FIRST_MONTH_DISCOUNT=0.5
 # 50% off first month after trial
 
+# Business Bank Account for Automated Weekly Payouts
+# Configure after obtaining LLC EIN and business bank account
+# Funds are automatically transferred every Friday at 8:00 AM
+BUSINESS_ACCOUNT_HOLDER=Your Business Name LLC
+BUSINESS_BANK_NAME=Your Bank Name
+BUSINESS_ACCOUNT_NUMBER=Your_Account_Number
+BUSINESS_ROUTING_NUMBER=Your_Routing_Number
+BUSINESS_ACCOUNT_TYPE=checking
+# Timezone for automated payout scheduling (default: America/New_York)
+TIMEZONE=America/New_York
+
 # ========================================
 # Email Service
 # ========================================
