--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts",
     "music-metadata": "^11.10.0",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.10",
     "redis": "^4.6.13",
     "socket.io": "^4.8.1",
