chore: Update contact email address across platform
- Changed from demond.balentine@atlasschool.com to balentinetechsolutions@gmail.com
- Updated all 12 translation files
- Updated package.json author field
- Updated Swagger API documentation
- Updated all documentation files
- Updated investor and conversion guides

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "collaboration",
     "real-time"
   ],
-  "author": "Demond Balentine <demond.balentine@atlasschool.com>",
+  "author": "Demond Balentine <balentinetechsolutions@gmail.com>",
   "license": "PROPRIETARY",
   "dependencies": {
     "@sendgrid/mail": "^8.1.6",
