--- a/.gitignore
+++ b/.gitignore
@@ -72,7 +72,7 @@ dist
 
 # Gatsby files
 .cache/
-public/
+# public/ - Commented out to allow tracking public assets
 
 # vuepress build output
 .vuepress/dist
