chore(lint): apply top lint fixes across front-end and server

--- a/.env
+++ b/.env
@@ -9,8 +9,8 @@ NODE_ENV=development
 CLIENT_URL=http://localhost:5501
 
 # Database Configuration (implement when adding database)
-# DATABASE_URL=mongodb://localhost:27017/creatorsync
-# DATABASE_NAME=creatorsync
+DATABASE_URL=mongodb://localhost:27017/creatorsync
+DATABASE_NAME=creatorsync
 
 # Stripe Payment Configuration
 STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
